# fido-server

./: .env.example  .gitignore  API_CONTRACT_SPECIFICATION.md  API_DESIGN.md  API_SPECIFICATION.md  ARCHITECTURE.md  BUILD_FIX_SUMMARY.md  COMPLIANCE_CHECKLIST.md  COMPREHENSIVE_DOCUMENTATION.md  COMPREHENSIVE_TESTING_REPORT.md  Cargo.toml  DATABASE_SCHEMA.md  Dockerfile  FIDO2_ANALYSIS.md  FIDO2_API_SPECIFICATION.md  FIDO2_SECURITY_REQUIREMENTS.md  FIDO2_TECHNICAL_ANALYSIS.md  FIDO2_TECHNICAL_SPECIFICATION.md  FIDO2_TEST_PLAN.md  FIDO2_TEST_SPECIFICATION.md  FIDO2_WebAuthn_Technical_Analysis.md  FIDO_SERVER3_ANALYSIS.md  FINAL_BUILD_STATUS.md  FINAL_BUILD_SUMMARY.md  FIXED_TEST_SUMMARY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  Implementation_Roadmap.md  PROJECT_SETUP.md  PROJECT_SUMMARY.md  README.md  RISK_ASSESSMENT.md  SECURITY_CHECKLIST.md  SECURITY_COMPLIANCE_CHECKLIST.md  SECURITY_FIXES_REQUIRED.md  SECURITY_REQUIREMENTS.md  STORAGE_DESIGN.md  STORAGE_REQUIREMENTS.md  Security_Implementation_Guide.md  (+38 more)
.cargo/: config.toml
migrations/: 001_create_users_table.sql  002_create_credentials_table.sql  003_create_mappings_table.sql  2024-01-01-000001_create_fido_tables.sql  2024-01-01-000001_initial_schema.sql
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2024-01-01-000001_create_users_table/: up.sql
migrations/2024-01-01-000001_initial_schema/: down.sql  up.sql
migrations/2024-01-01-000002_create_credentials_table/: down.sql  up.sql
migrations/2024-01-01-000003_create_challenges_table/: down.sql  up.sql
migrations/2024-01-01-000003_create_sessions_table/: up.sql
migrations/2024-01-01-000004_create_sessions_table/: down.sql  up.sql
migrations/2024-01-01-000005_create_audit_logs_table/: up.sql
src/: api.rs  auth.rs  config.rs  credential.rs  db_schema.rs  domain.rs  error.rs  handlers.rs  integration_tests.rs  lib.rs  main.rs  mapping.rs  models.rs  schema.rs  services.rs  state.rs  storage.rs  test_utils.rs  types.rs  utils.rs  webauthn.rs
src/adapters/: mod.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs
src/common/: mod.rs
src/config/: app.rs  app_config.rs  database.rs  mod.rs  settings.rs  types.rs  webauthn.rs
src/controllers/: assertion.rs  attestation.rs  auth.rs  authentication.rs  credentials.rs  dto.rs  fido.rs  health.rs  management.rs  mapping.rs  mod.rs  registration.rs  user.rs  users.rs  webauthn.rs  webauthn_controller.rs
src/core/: mod.rs
src/db/: connection.rs  mock_repositories.rs  mod.rs  models.rs  repositories.rs  repository.rs  schema.rs
src/domain/: dto.rs  entities.rs  mod.rs  models.rs  services.rs  value_objects.rs
src/dto/: assertion.rs  attestation.rs  common.rs  mod.rs
src/error/: handlers.rs  mod.rs  types.rs
src/infrastructure/: mod.rs
src/middleware/: auth.rs  client_ip.rs  cors.rs  error_handler.rs  json_error.rs  logging.rs  mod.rs  rate_limit.rs  rate_limiting.rs  security.rs
src/models/: challenge.rs  credential.rs  mod.rs  requests.rs  responses.rs  user.rs  webauthn.rs
src/ports/: mod.rs
src/repositories/: challenge_repo.rs  credential_repo.rs  mod.rs  user_repo.rs
src/routes/: api.rs  health.rs  mod.rs  v1.rs  webauthn.rs  webauthn_routes.rs
src/schema/: admin.rs  assertion.rs  attestation.rs  auth.rs  authentication.rs  challenge.rs  common.rs  credential.rs  credentials.rs  generated.rs  mod.rs  models.rs  registration.rs  requests.rs  responses.rs  user.rs  webauthn.rs
src/services/: attestation.rs  audit.rs  challenge.rs  challenge_service.rs  credential.rs  credential_service.rs  crypto_service.rs  fido.rs  mock_webauthn.rs  mod.rs  repositories.rs  repositories_impl.rs  session.rs  storage.rs  tests.rs  user.rs  user_service.rs  webauthn.rs  webauthn_service.rs
src/storage/: mod.rs  (+1 more)
tests/: api_tests.rs  complete_flow_tests.rs  compliance.rs  debug_test.rs  fido2_conformance_tests.rs  fido2_endpoints.rs  fido2_specification_test.rs  fido_conformance_tests.rs  integration.rs  integration_test.rs  integration_tests.rs  lib.rs  mod.rs  performance.rs  security.rs  server_tests.rs  simple_test.rs  standalone_test.rs  test_attestation_result.rs  unit.rs  unit_tests.rs  validation_tests.rs  webauthn_integration.rs
(+152 files in other folders)
