[package]
name = "fido2-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebAuthn implementation
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

# Database
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.1"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding
base64 = "0.22"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

# Cryptography
ring = "0.17"
rand = "0.8"

[dev-dependencies]
# Testing frameworks
actix-test = "0.1"
mockall = "0.13"
proptest = "1.4"
quickcheck = "1.0"
criterion = "0.5"

# Test utilities
tempfile = "3.8"
serial_test = "3.0"
test-log = "0.2"
env_logger = "0.11"

# HTTP testing
reqwest = { version = "0.11", features = ["json"] }
wiremock = "0.5"

# Async testing
tokio-test = "0.4"
futures-test = "0.3"

# Database testing
testcontainers = "0.15"

[features]
default = []
test-utils = []
integration-tests = []
property-tests = []

[[bench]]
name = "registration_bench"
harness = false

[[bench]]
name = "authentication_bench"
harness = false