[package]
name = "fido2-webauthn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebAuthn implementation
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"

# Database
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.1"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64urlsafedata = "0.5"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Crypto
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
# Testing frameworks
actix-test = "0.1"
mockall = "0.13"
proptest = "1.4"
criterion = "0.5"

# Test utilities
tempfile = "3.8"
serial_test = "3.0"
test-log = "0.2"
env_logger = "0.11"

# HTTP testing
reqwest = { version = "0.11", features = ["json"] }
wiremock = "0.5"

# Async testing
tokio-test = "0.4"
futures-test = "0.3"

[[bin]]
name = "fido2-server"
path = "src/main.rs"

[features]
default = []
test-utils = []
integration-tests = []
property-tests = []

# Remove the problematic bench configuration that was causing the build error
# We'll create the benchmark files properly