[package]
name = "fido2-webauthn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebAuthn implementation
webauthn-rs = "0.5"

# Database
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.1"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptography
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
# Testing frameworks
actix-test = "0.1"
mockall = "0.13"
tokio-test = "0.4"
wiremock = "0.6"
testcontainers = "0.20"

# Property-based testing
proptest = "1.4"
quickcheck = "1.0"

# Security testing
criterion = "0.5"
hex = "0.4"
base64ct = "1.6"

# Test data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
tempfile = "3.8"

# HTTP client for testing
reqwest = { version = "0.12", features = ["json"] }

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "fido2_webauthn_server"
path = "src/lib.rs"